[gd_scene load_steps=9 format=2]

[ext_resource path="res://Item/GloveFabric.png" type="Texture" id=1]
[ext_resource path="res://assets/Coin.png" type="Texture" id=2]
[ext_resource path="res://Shop/Item.PNG" type="Texture" id=3]
[ext_resource path="res://Shop/ItemPrice.gd" type="Script" id=4]
[ext_resource path="res://assets/Fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Doublespace/Peaberry-Doublespace.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 27 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="ShopItem" type="Area2D"]
script = ExtResource( 4 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 125.75, 67.1874 )
scale = Vector2( 2.88816, 2.86184 )
texture = ExtResource( 3 )
offset = Vector2( -5.53986, -13.977 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 27.7502, 27.1875 )
scale = Vector2( 1.05537, 1.04576 )
texture = ExtResource( 1 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 173.75, 27.1874 )
scale = Vector2( 0.0799999, 0.0799999 )
texture = ExtResource( 2 )

[node name="Price" type="Label" parent="."]
margin_left = 183.75
margin_top = 20.1874
margin_right = 215.75
margin_bottom = 34.1874
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ItemName" type="Label" parent="."]
margin_left = 53.0
margin_top = 22.0
margin_right = 125.0
margin_bottom = 38.0
rect_scale = Vector2( 1.25, 1.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Name"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 110, 27 )
shape = SubResource( 1 )

[node name="SoldOut" type="Label" parent="."]
visible = false
margin_left = 155.0
margin_top = 23.0
margin_right = 235.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sold Out"

[connection signal="mouse_entered" from="." to="." method="_on_ShopItem_mouse_entered"]
